# gst-cv

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindGirCompiler.cmake  FindGirScanner.cmake
gst-libs/gst/: CMakeLists.txt  gstcvdetectionmeta.c  gstcvdetectionmeta.h  gstreamer-cv.pc.in
tests/: CMakeLists.txt
tests/check/: CMakeLists.txt  detectionmeta.c
tests/python/: CMakeLists.txt  test_detection_meta.py
